# py101

./: .gitignore  LICENSE  README.md  pyproject.toml
src/py101/: __init__.py  cli.py
src/py101/transformer/tutorial/: 0_dataset.ipynb  12_Input_em_pe.ipynb  1_EM.ipynb  2_PE.ipynb  311_LN.ipynb  31_MHA.ipynb  32_FFN.ipynb  3_Encoder.ipynb  4_Decoder.ipynb  5_generator.ipynb  6_transformer.ipynb  demo.txt
