[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py101"
version = "0.1.0"
description = "Python 101"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dongsheng Zhang", email = "dszhang79@outlook.com"}
]
keywords = ["Python programming", "robotics", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.20.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]
vision = [
    "opencv-python>=4.5.0",
    "pillow>=9.0.0",
]
all = [
    "py101[dev,vision]",
]

[project.urls]
Homepage = "https://github.com/zds79"
Documentation = "https://github.com/zds79/py101/blob/main/README.md"
Repository = "https://github.com/zds79/py101"

[project.scripts]
py101 = "py101.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
